--- a/css/editor.css
+++ b/css/editor.css
@@ -1,4 +1,29 @@
-/* Slider */
+
+.wp-block-rtgb-bio-block .bio-top-container {
+	display: flex;
+}
+
+.wp-block-rtgb-bio-block .bio-top-container img {
+	display: block;
+	margin-bottom: 15px;
+}
+
+.wp-block-rtgb-bio-block .bio-profile-pic {
+	min-width: 180px;
+}
+
+.gutenberg .wp-block-rtgb-bio-block .social-links {
+	list-style: none;
+}
+
+.wp-block-rtgb-bio-block .social-links li:before {
+	content: "\F139";
+	font: normal 20px/1 dashicons;
+	speak: none;
+	vertical-align: middle;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}/* Slider */
 .slick-slider
 {
 	position: relative;
@@ -116,4 +141,60 @@
 }
 .slick-arrow.slick-hidden {
 	display: none;
+}
+
+/* Custom CSS */
+
+.slick-prev,
+.slick-next {
+	font-size: 0;
+	position: absolute;
+	bottom: 20px;
+	color: #000000;
+	opacity: 0.8;
+	border: 0;
+	background: none;
+	z-index: 1;
+	top: 0;
+	cursor: pointer;
+	outline: none;
+}
+
+.slick-prev {
+	left: 20px;
+}
+
+.slick-prev:hover,
+.slick-next:hover {
+	opacity: 1;
+}
+
+.slick-prev:after {
+	content: "\F341";
+	font: normal 20px/1 dashicons;
+	speak: none;
+	vertical-align: middle;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	font-size: 40px;
+}
+
+.slick-next {
+	right: 20px;
+	text-align: right;
+}
+
+.slick-next:after {
+	content: "\F345";
+	font: normal 20px/1 dashicons;
+	speak: none;
+	vertical-align: middle;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	font-size: 40px;
+}
+
+.slick-prev:hover:after,
+.slick-next:hover:after {
+	color: #7e7e7e;
 }
